# tulip

./: .gitignore  Cargo.toml  README.md  bibliography.bib  rustfmt.toml
src/: machinecfg.rs
src/algo/: class.rs  saturation.rs
src/algo/eq/: class.rs  graph.rs  node.rs
src/algo/paropt/: optim.rs
src/equiv/: class.rs  graph.rs  mod.rs  node.rs
src/equiv/algo/: class.rs  mod.rs
src/equiv/algo/prune/: subcongru.rs
src/equiv/data/graph/: congruent.rs  cyclical.rs
src/equiv/data/lang/: sexp.rs
src/equiv/data/node/: node.rs
src/equiv/model/graph/: equivalence.rs
src/equiv/model/oper/: operator.rs
src/equiv/optim/: optimize.rs
src/equiv/optim/extract/: cost.rs  extractor.rs
src/graph/model/: equiv.rs  graph.rs
src/graph/optim/: egraph.rs
src/loop/: loop.rs  mod.rs
src/model/: cyclical.rs  term.rs
src/model/compute/: compute.rs
src/model/deform/: reshape.rs
src/model/equiv/: class.rs  graph.rs  iso.rs  node.rs
src/model/form/: deform.rs  reshape.rs
src/model/graph/: compute.rs  generate.rs  substitution.rs
src/model/lang/: language.rs
src/model/optim/: optim.rs
src/model/reshape/: match.rs  reshape.rs
src/model/substitute/: substitute.rs
src/node/: ident.rs  node.rs  noop.rs
src/optim/: term.rs
src/optim/explore/: deform.rs  exploration.rs  explore.rs  sat.rs
src/optim/extract/: cost.rs  lp.rs
src/tensor/: expr.rs  gradient.rs  python.rs  tensor.rs
src/tensor/_op/: _operator.py  more-op.py
src/tensor/op/: operator.rs
src/tensor/tensor/: __init__.py  annotation.py  index.py  initialize.py  move.py
(+235 files in other folders)
